# confd-client-rs

./: Cargo.toml  README.md
examples/: async_listener.rs  basic_usage.rs  client_builder.rs  client_subscribe_closure.rs  client_subscribe_function.rs
src/: client.rs  confd.rs  error.rs  lib.rs
